--- a/02restful/build.gradle
+++ b/02restful/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-
+    compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.1.2.RELEASE'
 }
