--- a/03messaging/build.gradle
+++ b/03messaging/build.gradle
@@ -14,4 +14,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.activemq', name: 'activemq-all', version: '5.15.9'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+
 }
