--- a/03messaging/build.gradle
+++ b/03messaging/build.gradle
@@ -11,10 +11,18 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'TelematikEinheit'
+        )
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.activemq', name: 'activemq-all', version: '5.15.9'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-
+    compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 }
